--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "lms-laravel/default",
+  "name": "lms-laravel/default-theme",
   "description": "This is the Default theme for LMS - Laravel",
   "type": "asgard-theme",
   "require": {
